# two_phase_commit_solana

./: .gitignore  2pc  Anchor.toml  LICENSE  README.md  package-lock.json  package.json
client/: cli.ts
programs/demo_participant/: Cargo.toml
programs/demo_participant/src/: lib.rs
programs/two_phase_commit/: Cargo.toml
programs/two_phase_commit/src/: error.rs  events.rs  hooks.rs  lib.rs
programs/two_phase_commit/src/instructions/: abort.rs  begin_transaction.rs  cast_vote.rs  close_transaction.rs  commit.rs  commit_no_hooks.rs  mod.rs  timeout_abort.rs
programs/two_phase_commit/src/state/: transaction.rs
tests/: two_phase_commit.ts
